# cpp-library-template

./: CMakeLists.txt  README.md
MyLibrary/: CMakeLists.txt
MyLibrary/Source/: Foo.cpp
Test/: CMakeLists.txt  FooTest.cpp
